feat:added footer

--- a/tasks_day2/template/courses.html
+++ b/tasks_day2/template/courses.html
@@ -480,5 +480,151 @@
         <small class="text-muted">Showing 4 of 20 courses</small>
       </div>
     </div>
+
+    <!-- start  footer  -->
+    <footer id="footerCourses" class="py-5">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="inner">
+              <h2 class="fw-bolder pb-0 mb-0">Academia</h2>
+              <span class="text-uppercase subtitle fw-bold"
+                >Online Education & Learning</span
+              >
+              <p class="my-4 text-secondary">
+                A small river named Duden flows by their place and supplies it
+                with the necessary regelialia.
+              </p>
+              <div class="social-icons d-flex gap-3">
+                <a href="#" class="rounded-circle"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+                <a href="#" class="rounded-circle"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a href="#" class="rounded-circle"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 two">
+            <div class="inner">
+              <div class="row">
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Explore</h5>
+                  <div class="d-flex flex-column gap-2">
+                    <a><i class="fa-solid fa-arrow-right"></i> About us</a>
+                    <a><i class="fa-solid fa-arrow-right"></i> services</a>
+                    <a><i class="fa-solid fa-arrow-right"></i> courses</a>
+                    <a><i class="fa-solid fa-arrow-right"></i> Blog</a>
+                    <a><i class="fa-solid fa-arrow-right"></i> Contact us</a>
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <h5 class="fw-bold mb-3">Quick links</h5>
+                  <div class="d-flex flex-column gap-2">
+                    <a><i class="fa-solid fa-arrow-right"></i> Contact Us</a>
+                    <a><i class="fa-solid fa-arrow-right"></i> Pricing</a>
+                    <a
+                      ><i class="fa-solid fa-arrow-right"></i
+                      >Terms&conditions</a
+                    >
+                    <a><i class="fa-solid fa-arrow-right"></i> Privacy</a>
+                    <a><i class="fa-solid fa-arrow-right"></i> Feedback</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 three">
+            <div class="inner">
+              <h5 class="fw-bold mb-3">Recent post</h5>
+              <div class="row g-4">
+                <div class="col-md-12 d-flex gap-3">
+                  <img
+                    src="./src/imgs/author-1.jpg"
+                    alt="Blog 3"
+                    class="blog-img"
+                    style="width: 3.125rem; height: 3.125rem"
+                  />
+                  <div>
+                    <p class="mb-1">
+                      <i class="fa fa-calendar text-success"></i> Jan. 18, 2021
+                      &nbsp;&nbsp; <i class="fa fa-user text-success"></i> Admin
+                    </p>
+                    <h5 class="blog-title fs-6">Creativity and Inspiration</h5>
+                  </div>
+                </div>
+                <div class="col-md-12 d-flex gap-3">
+                  <img
+                    src="./src/imgs/imgi_2_about.jpg"
+                    alt="Blog 3"
+                    class="blog-img"
+                    style="width: 3.125rem; height: 3.125rem"
+                  />
+                  <div>
+                    <p class="mb-1">
+                      <i class="fa fa-calendar text-success"></i> Jan. 18, 2021
+                      &nbsp;&nbsp; <i class="fa fa-user text-success"></i> Admin
+                    </p>
+                    <h5 class="blog-title fs-6">Creativity and Inspiration</h5>
+                  </div>
+                </div>
+                <div class="col-md-12 d-flex gap-3">
+                  <img
+                    src="./src/imgs/author-1.jpg"
+                    alt="Blog 3"
+                    class="blog-img"
+                    style="width: 3.125rem; height: 3.125rem"
+                  />
+                  <div>
+                    <p class="mb-1">
+                      <i class="fa fa-calendar text-success"></i> Jan. 18, 2021
+                      &nbsp;&nbsp; <i class="fa fa-user text-success"></i> Admin
+                    </p>
+                    <h5 class="blog-title fs-6">Creativity and Inspiration</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 four">
+            <h5 class="mb-4 fw-bold">Have a Questions?</h5>
+
+            <div class="d-flex align-items-start mb-3">
+              <i class="fa-solid fa-map fs-5 me-3"></i>
+
+              <p class="mb-0">
+                203 Fake St. Mountain View, San Francisco, California, USA
+              </p>
+            </div>
+
+            <div class="d-flex align-items-start mb-3">
+              <i class="fa-solid fa-phone fs-5 me-3"></i>
+
+              <p class="mb-0">+2 392 3929 210</p>
+            </div>
+
+            <div class="d-flex align-items-start">
+              <i class="fa-brands fa-telegram fs-5 me-3"></i>
+
+              <p class="mb-0">info@yourdomain.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="text-center p-5" id="endFoot">
+      <p>
+        Copyright ©2025 All rights reserved | This template is made with by
+        <i class="fa-solid fa-heart" style="color: #999999"></i>
+        <span>Colorlib</span>
+      </p>
+    </div>
+
+    <!-- end  footer  -->
   </body>
 </html>
