--- a/tasks_day2/template/src/css/courses.css
+++ b/tasks_day2/template/src/css/courses.css
@@ -93,3 +93,64 @@
 .w-85 {
   width: 85%;
 }
+
+
+
+/* start footer */
+#footerCourses{
+  background-color: #EEEEEE;
+}
+
+  .social-icons a {
+      width: 40px;
+      height: 40px;
+      background: #1EB2A6;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 15px !important;
+      transition: 0.3s;
+    }
+    .social-icons a:hover {
+      background: #1EB2A6;
+      transform: scale(1.1);
+    }
+
+    .subtitle{
+      color: #1EB2A6;
+      font-size: .625rem;
+    }
+
+    #footerCourses .two i {
+      font-size: 8px;
+    }
+
+
+      
+
+  .blog-title {
+    font-size: 18px;
+    font-weight: 600;
+    color: #333;
+    margin-top: 5px;
+  }
+
+  #footerCourses .three p {
+    font-size: 14px;
+     color: #1EB2A6;;
+  }
+
+  #footerCourses .four i{
+    color: #1EB2A6;
+  }
+  #endFoot{
+    background-color: #e9e9e9;
+    
+  }
+  #endFoot span{
+    color: #1EB2A6;
+    
+  }
+
+/* end footer */
