edit: edit header for team page

--- a/tasks_day2/template/team.html
+++ b/tasks_day2/template/team.html
@@ -140,7 +140,7 @@
 
     <section
       class="hero-wrap"
-      style="background-image: url('src/images/bg-team-page.webp')"
+      style="background-image: url('src/images/bg_2.jpg.webp')"
     >
       <div class="overlay"></div>
       <div class="container">
