add: fotter second section

--- a/tasks_day2/template/contact.html
+++ b/tasks_day2/template/contact.html
@@ -47,6 +47,32 @@
       </section>
 
       <!-- second -->
+
+      <section class="sco-footer-section">
+        <div class="row container m-auto">
+          <div class="col-3">
+            <h2>
+              <a class="navbar-brand align-items-center" href="index.html">
+                Academia <br />
+                <span>Online Education &amp; Learning</span>
+              </a>
+            </h2>
+            <p>
+              A small river named Duden flows by their place and supplies it
+              with the necessary regelialia.
+            </p>
+            <ul class="d-flex gap-4 item-c">
+              <li><i class="fa-brands fa-facebook"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
+            </ul>
+          </div>
+          <div class="col-2"></div>
+          <div class="col-2"></div>
+          <div class="col-3"></div>
+          <div class="col-2"></div>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
