--- a/tasks_day2/template/src/css/team.css
+++ b/tasks_day2/template/src/css/team.css
@@ -592,3 +592,135 @@ section.cards {
   cursor: pointer;
   font-size: 16px;
 }
+
+/* ========= Start Footer Styles ========== */
+.ftco-footer {
+  padding: 60px 0 0;
+  background: #fff;
+  color: #666;
+  font-size: 14px;
+}
+
+.ftco-footer h2 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: #000;
+}
+
+.ftco-footer .main{
+    font-size: 24px;
+    color:#1db9aa;
+}
+.ftco-footer p {
+  font-size: 14px;
+  line-height: 1.8;
+  color: #777;
+}
+
+.ftco-footer ul {
+  padding: 0;
+  list-style: none;
+}
+
+.ftco-footer ul li {
+  margin-bottom: 10px;
+}
+
+.ftco-footer ul li a {
+  color: #777;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.ftco-footer .social li a {
+  color: #fff;
+}
+
+.ftco-footer ul li a:hover {
+  color: #0bbba0;
+}
+
+/* Social Icons */
+.ftco-footer-social li {
+  margin-right: 10px;
+}
+
+.ftco-footer-social a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background: #0bbba0;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 35px;
+  transition: 0.3s;
+}
+
+.ftco-footer-social a:hover {
+  background: #089e8d;
+}
+
+/* Recent Posts */
+.block-21 {
+  display: flex;
+}
+
+.block-21 .blog-img {
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+
+.block-21 .text h3 {
+  font-size: 14px;
+  margin: 0 0 5px;
+}
+.block-21 .text a {
+  color: #1db9aa;
+}
+
+.block-21 .text .meta {
+  font-size: 12px;
+  color: #aaa;
+}
+
+.block-21 .text .meta div {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+/* Contact Info */
+.block-23 ul li {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 12px;
+}
+
+.block-23 ul li span.fa {
+  font-size: 16px;
+  color: #0bbba0;
+  margin-right: 10px;
+}
+
+.block-23 ul li span.text {
+  font-size: 14px;
+  color: #666;
+}
+
+/* Copyright */
+.ftco-footer .bg-light {
+  background: #f8f9fa !important;
+  font-size: 14px;
+  color: #999;
+}
+
+.ftco-footer .bg-light a {
+  color: #0bbba0;
+  text-decoration: none;
+}
+/* ========== End Footer Styles ========== */
