--- a/tasks_day2/template/team.html
+++ b/tasks_day2/template/team.html
@@ -17,8 +17,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
@@ -35,7 +41,7 @@
   </head>
   <body>
     <!-- ========== Start Header ========== -->
-         <div class="top-wrap">
+    <div class="top-wrap">
       <div class="container">
         <div class="row">
           <div class="col-md col-xl-5 d-flex align-items-center">
@@ -144,9 +150,17 @@
     >
       <div class="overlay"></div>
       <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center">
+        <div
+          class="row no-gutters slider-text align-items-center justify-content-center"
+        >
           <div class="col-md-9 pt-5 mt-5 text-center">
-            <p class="breadcrumbs"><span class="me-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Team <i class="fa fa-chevron-right"></i></span></p>
+            <p class="breadcrumbs">
+              <span class="me-2"
+                ><a href="index.html"
+                  >Home <i class="fa fa-chevron-right"></i></a
+              ></span>
+              <span>Team <i class="fa fa-chevron-right"></i></span>
+            </p>
             <h1 class="mb-0 bread">Team</h1>
           </div>
         </div>
@@ -156,7 +170,7 @@
 
     <section class="cards">
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <img src="./src/images/team-1.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -170,7 +184,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <img src="./src/images/team-2.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -184,7 +198,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <img src="./src/images/team-4.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -198,7 +212,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <img src="./src/images/team-1.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -212,7 +226,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <img src="./src/images/team-2.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -226,7 +240,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <img src="./src/images/team-4.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -240,7 +254,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <img src="./src/images/team-1.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -254,7 +268,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <img src="./src/images/team-2.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -268,7 +282,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <img src="./src/images/team-4.jpg" alt="" srcset="" />
         <div class="icons">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
@@ -293,5 +307,140 @@
         <button type="submit"><i class="bi bi-send"></i></button>
       </form>
     </section>
+
+    <!-- ========== Start Footer ========== -->
+    <footer class="ftco-footer">
+      <div class="container">
+        <div class="row mb-5">
+          <!-- Logo + About -->
+          <div class="col-md-6 col-lg-3">
+            <h2 class="ftco-heading-2 main">ACADEMIA</h2>
+            <p>
+              A small river named Duden flows by their place and supplies it
+              with the necessary regelialia.
+            </p>
+            <ul class="ftco-footer-social list-unstyled d-flex social">
+              <li>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Explore -->
+          <div class="col-md-6 col-lg-2">
+            <h2 class="ftco-heading-2">Explore</h2>
+            <ul class="list-unstyled">
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Courses</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-md-6 col-lg-2">
+            <h2 class="ftco-heading-2">Quick Links</h2>
+            <ul class="list-unstyled">
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Terms &amp; Conditions</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Feedbacks</a></li>
+            </ul>
+          </div>
+
+          <!-- Recent Posts -->
+          <div class="col-md-6 col-lg-3">
+            <h2 class="ftco-heading-2">Recent Posts</h2>
+            <div class="block-21 d-flex mb-4">
+              <a class="blog-img" style="background-image: url('src/images/bg_2.jpg.webp')"></a>
+              <div class="text">
+                <h3 class="heading">
+                  <a href="#">Creativity and Inspiration</a>
+                </h3>
+                <div class="meta">
+                  <div><span class="fa fa-calendar"></span> Jan. 18, 2021</div>
+                  <div><span class="fa fa-user"></span> Admin</div>
+                </div>
+              </div>
+            </div>
+            <div class="block-21 d-flex mb-4">
+              <a
+                class="blog-img"
+                style="background-image: url('src/images/bg_3.webp')"
+              ></a>
+              <div class="text">
+                <h3 class="heading">
+                  <a href="#">Creativity and Inspiration</a>
+                </h3>
+                <div class="meta">
+                  <div><span class="fa fa-calendar"></span> Jan. 18, 2021</div>
+                  <div><span class="fa fa-user"></span> Admin</div>
+                </div>
+              </div>
+            </div>
+            <div class="block-21 d-flex">
+              <a
+                class="blog-img"
+                style="background-image: url('src/images/bg_4.webp')"
+              ></a>
+              <div class="text">
+                <h3 class="heading">
+                  <a href="#">Creativity and Inspiration</a>
+                </h3>
+                <div class="meta">
+                  <div><span class="fa fa-calendar"></span> Jan. 18, 2021</div>
+                  <div><span class="fa fa-user"></span> Admin</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="col-md-6 col-lg-2">
+            <h2 class="ftco-heading-2">Have a Questions?</h2>
+            <div class="block-23 mb-3">
+              <ul>
+                <li>
+                  <span class="fa fa-map"></span
+                  ><span class="text"
+                    >203 Fake St. Mountain View, San Francisco, California,
+                    USA</span
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="fa fa-phone"></span
+                    ><span class="text">+2 392 3929 210</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><span class="fa fa-paper-plane"></span
+                    ><span class="text">info@yourdomain.com</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid text-center py-4 bg-light">
+        <p>
+          Copyright &copy;2025 All rights reserved | This template is made with
+          <span class="fa fa-heart"></span> by
+          <a href="https://colorlib.com">Colorlib</a>
+        </p>
+      </div>
+    </footer>
+    <!-- ========== End Footer ========== -->
   </body>
 </html>
