feat:add home page slider

--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -21,6 +21,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
+    />
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
@@ -227,6 +231,147 @@
       </div>
     </div>
   </section>
+
+  <!-- slider -->
+    <div class="splide" id="course-slider">
+  <div class="splide__track">
+    <ul class="splide__list">
+
+      <!-- Card 1 -->
+      <li class="splide__slide">
+        <div class="course-card">
+          <div class="left">
+            <img src="images/basic.png" class="icon" alt="icon" />
+          </div>
+          <div class="right">
+            <h3 class="course-title">Basic Fundamentals for Software Engineering</h3>
+            <div class="stars">★★★★★ (5.0)</div>
+            <div class="author">
+              <img src="images/author.jpg" alt="author" />
+              <span>by John Smith</span>
+            </div>
+            <p>35 lectures (120 hrs)</p>
+          </div>
+          <div class="bottom">
+            <div class="price">$120 All Course / $18 per month</div>
+            <a href="#" class="btn">ENROLL NOW!</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Card 2 -->
+      <li class="splide__slide">
+        <div class="course-card">
+          <div class="left">
+            <img src="images/enhance.png" class="icon" alt="icon" />
+          </div>
+          <div class="right">
+            <h3 class="course-title">Enhancing Adobe Photoshop CC 2020 Skills</h3>
+            <div class="stars">★★★★★ (5.0)</div>
+            <div class="author">
+              <img src="images/author.jpg" alt="author" />
+              <span>by Sarah Johnson</span>
+            </div>
+            <p>35 lectures (120 hrs)</p>
+          </div>
+          <div class="bottom">
+            <div class="price">$120 All Course / $18 per month</div>
+            <a href="#" class="btn">ENROLL NOW!</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Card 3 -->
+      <li class="splide__slide">
+        <div class="course-card">
+          <div class="left">
+            <img src="images/html.png" class="icon" alt="icon" />
+          </div>
+          <div class="right">
+            <h3 class="course-title">HTML, CSS, and Javascript for Web Developers</h3>
+            <div class="stars">★★★★★ (5.0)</div>
+            <div class="author">
+              <img src="images/author.jpg" alt="author" />
+              <span>by Michael Lee</span>
+            </div>
+            <p>70 lectures (250 hrs)</p>
+          </div>
+          <div class="bottom">
+            <div class="price">$200 All Course / $25 per month</div>
+            <a href="#" class="btn">ENROLL NOW!</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Card 4 -->
+      <li class="splide__slide">
+        <div class="course-card">
+          <div class="left">
+            <img src="images/intro.png" class="icon" alt="icon" />
+          </div>
+          <div class="right">
+            <h3 class="course-title">Introducing to Programming with WordPress</h3>
+            <div class="stars">★★★★★ (5.0)</div>
+            <div class="author">
+              <img src="images/author.jpg" alt="author" />
+              <span>by Sarah Johnson</span>
+            </div>
+            <p>35 lectures (120 hrs)</p>
+          </div>
+          <div class="bottom">
+            <div class="price">$120 All Course / $18 per month</div>
+            <a href="#" class="btn">ENROLL NOW!</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Card 5 -->
+      <li class="splide__slide">
+        <div class="course-card">
+          <div class="left">
+            <img src="images/basic.png" class="icon" alt="icon" />
+          </div>
+          <div class="right">
+            <h3 class="course-title">Basic Fundamentals for Software Engineering</h3>
+            <div class="stars">★★★★★ (5.0)</div>
+            <div class="author">
+              <img src="images/author.jpg" alt="author" />
+              <span>by Sarah Johnson</span>
+            </div>
+            <p>35 lectures (120 hrs)</p>
+          </div>
+          <div class="bottom">
+            <div class="price">$120 All Course / $18 per month</div>
+            <a href="#" class="btn">ENROLL NOW!</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Card 6 -->
+      <li class="splide__slide">
+        <div class="course-card">
+          <div class="left">
+            <img src="images/enhance.png" class="icon" alt="icon" />
+          </div>
+          <div class="right">
+            <h3 class="course-title">Enhancing Adobe Photoshop CC 2020 Skills</h3>
+            <div class="stars">★★★★★ (5.0)</div>
+            <div class="author">
+              <img src="images/author.jpg" alt="author" />
+              <span>by Michael Lee</span>
+            </div>
+            <p>70 lectures (250 hrs)</p>
+          </div>
+          <div class="bottom">
+            <div class="price">$200 All Course / $25 per month</div>
+            <a href="#" class="btn">ENROLL NOW!</a>
+          </div>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+</div>
 
   <!-- Online Courses Cards Section -->
   <section class="ftco-section">
@@ -757,6 +902,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Owl Carousel JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
+
 
   <!-- Script to initialize the carousel -->
   <script>
