style:edit the style

--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -241,13 +241,13 @@
       <li class="splide__slide">
         <div class="course-card">
           <div class="left">
-            <img src="images/basic.png" class="icon" alt="icon" />
+            <img src="src/images/basic.png" class="icon" alt="icon" />
           </div>
           <div class="right">
             <h3 class="course-title">Basic Fundamentals for Software Engineering</h3>
             <div class="stars">★★★★★ (5.0)</div>
             <div class="author">
-              <img src="images/author.jpg" alt="author" />
+              <img src="src/images/author.jpg" alt="author" />
               <span>by John Smith</span>
             </div>
             <p>35 lectures (120 hrs)</p>
@@ -263,13 +263,13 @@
       <li class="splide__slide">
         <div class="course-card">
           <div class="left">
-            <img src="images/enhance.png" class="icon" alt="icon" />
+            <img src="src/images/enhance.png" class="icon" alt="icon" />
           </div>
           <div class="right">
             <h3 class="course-title">Enhancing Adobe Photoshop CC 2020 Skills</h3>
             <div class="stars">★★★★★ (5.0)</div>
             <div class="author">
-              <img src="images/author.jpg" alt="author" />
+              <img src="src/images/author.jpg" alt="author" />
               <span>by Sarah Johnson</span>
             </div>
             <p>35 lectures (120 hrs)</p>
@@ -285,13 +285,13 @@
       <li class="splide__slide">
         <div class="course-card">
           <div class="left">
-            <img src="images/html.png" class="icon" alt="icon" />
+            <img src="src/images/html.png" class="icon" alt="icon" />
           </div>
           <div class="right">
             <h3 class="course-title">HTML, CSS, and Javascript for Web Developers</h3>
             <div class="stars">★★★★★ (5.0)</div>
             <div class="author">
-              <img src="images/author.jpg" alt="author" />
+              <img src="src/images/author.jpg" alt="author" />
               <span>by Michael Lee</span>
             </div>
             <p>70 lectures (250 hrs)</p>
@@ -307,13 +307,13 @@
       <li class="splide__slide">
         <div class="course-card">
           <div class="left">
-            <img src="images/intro.png" class="icon" alt="icon" />
+            <img src="src/images/intro.png" class="icon" alt="icon" />
           </div>
           <div class="right">
             <h3 class="course-title">Introducing to Programming with WordPress</h3>
             <div class="stars">★★★★★ (5.0)</div>
             <div class="author">
-              <img src="images/author.jpg" alt="author" />
+              <img src="src/images/author.jpg" alt="author" />
               <span>by Sarah Johnson</span>
             </div>
             <p>35 lectures (120 hrs)</p>
@@ -329,13 +329,13 @@
       <li class="splide__slide">
         <div class="course-card">
           <div class="left">
-            <img src="images/basic.png" class="icon" alt="icon" />
+            <img src="src/images/basic.png" class="icon" alt="icon" />
           </div>
           <div class="right">
             <h3 class="course-title">Basic Fundamentals for Software Engineering</h3>
             <div class="stars">★★★★★ (5.0)</div>
             <div class="author">
-              <img src="images/author.jpg" alt="author" />
+              <img src="src/images/author.jpg" alt="author" />
               <span>by Sarah Johnson</span>
             </div>
             <p>35 lectures (120 hrs)</p>
@@ -351,13 +351,13 @@
       <li class="splide__slide">
         <div class="course-card">
           <div class="left">
-            <img src="images/enhance.png" class="icon" alt="icon" />
+            <img src="src/images/enhance.png" class="icon" alt="icon" />
           </div>
           <div class="right">
             <h3 class="course-title">Enhancing Adobe Photoshop CC 2020 Skills</h3>
             <div class="stars">★★★★★ (5.0)</div>
             <div class="author">
-              <img src="images/author.jpg" alt="author" />
+              <img src="src/images/author.jpg" alt="author" />
               <span>by Michael Lee</span>
             </div>
             <p>70 lectures (250 hrs)</p>
