--- a/tasks_day2/template/pricing.html
+++ b/tasks_day2/template/pricing.html
@@ -28,6 +28,101 @@
   </head>
   <body>
     
+<!-- Prices  -->
+
+
+<section id="pricing" class="pricing-section py-5" style="background-color: #F8F8F8;">
+    <div class="container">
+      <div class="text-center mb-5">
+         <span style="color: #1EB2A6;">Our Pricing</span>
+        <h2  style="font-weight: bold;">Pricing & Packages</h2>
+        
+        </div>
+        </div>
+<div class="container mt-4">
+  <div  class="row justify-content-center">
+    
+    
+<!-- car1-->
+
+<div class="col-md-3 card-animation">
+<div class="card-section" style="width: 15rem; border-color: aliceblue;">
+
+  <div class="card-body" style="text-align: center;">
+    
+    <h5 class="card-title">Basic Plan</h5>
+    
+    <span class="price-Card">
+      $49
+    </span>
+    <p class="card-text" style="color: #999; width:200px;font-weight:bold;text-align: center ">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+    
+    <button type="button" class="btn btn-outline-primary " style="border-color: #1EB2A6; background-color: #1EB2A6;">Primary</button>
+  </div>
+</div>
+</div>
+<!-- 2 -->
+<div class="col-md-3 card-animation">
+<div class="card-section" style="width: 15rem;border-color: aliceblue;">
+
+  <div class="card-body" style="text-align: center;">
+    
+    <h5 class="card-title">Beginner Plan</h5>
+    
+    <span class="price-Card">
+      $79
+    </span>
+    <p class="card-text" style="color: #999; width:200px;font-weight:bold;text-align: center ">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+    
+    <button type="button" class="btn btn-outline-primary " style="border-color: #1EB2A6; background-color: #1EB2A6;">Primary</button>
+  </div>
+</div>
+</div>
+<!-- 3 -->
+ <div class="col-md-3 card-animation">
+<div class="card-section" style="width: 15rem;border-color: aliceblue;">
+
+  <div class="card-body" style="text-align: center;">
+    
+    <h5 class="card-title">Premium Plan</h5>
+    
+    <span class="price-Card">
+      $109
+    </span>
+    <p class="card-text" style="color: #999; width:200px;font-weight:bold;text-align: center ">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+    
+    <button type="button" class="btn btn-outline-primary " style="border-color: #1EB2A6; background-color: #1EB2A6;">Primary</button>
+  </div>
+</div>
+</div>
+<!-- 4 -->
+ <div class="col-md-3 card-animation">
+<div class="card-section" style="width: 15rem;border-color: aliceblue;">
+
+  <div class="card-body" style="text-align: center;">
+    
+    <h5 class="card-title">Ultimate Plan</h5>
+    
+    <span class="price-Card">
+      $149
+    </span>
+    <p class="card-text" style="color: #999; width:200px;font-weight:bold;text-align: center ">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+    
+    <button type="button" class="btn btn-outline-primary " style="border-color: #1EB2A6; background-color: #1EB2A6;">Primary</button>
+  </div>
+</div>
+</div>
+<!-- end -->
+</div>
+</div>
+</section>
+
+<!-- End prices Section -->
+
+
+
+
+
     <!-- drop down list -->
 
 <div class="container my-5 py-5 fw-bold">
